k8s/blob-db.yaml

apiVersion: v1
kind: Service
metadata:
  name: blob-db-service
  labels:
    app: blob-db
spec:
  ports:
    - port: 5433
  selector:
    app: blob-db
    tier: blob-db
  clusterIP: None

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: blob-db-stateful-set
  labels:
    app: blob-db
spec:
  serviceName: "blob-db-service"
  replicas: 1
  selector:
    matchLabels:
      app: blob-db
      tier: blob-db
  template:
    metadata:
      labels:
        app: blob-db
        tier: blob-db
    spec:
      containers:
        - name: postgres
          image: postgres:16.2
          ports:
            - containerPort: 5433
              name: blob-db-port
          volumeMounts:
            - name: blob-db-persistent-storage
              mountPath: /var/lib/postgresql/blob-data
  volumeClaimTemplates:
    - metadata:
        name: blob-db-persistent-storage
      spec:
        storageClassName: standard
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 250Mi
