k8s/meta-db.yaml

apiVersion: v1
kind: Service
metadata:
  name: meta-db-service
  labels:
    app: meta-db
spec:
  ports:
    - port: 5432
  selector:
    app: meta-db
    tier: meta-db
  clusterIP: None

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: meta-db-stateful-set
  labels:
    app: meta-db
spec:
  serviceName: "meta-db-service"
  replicas: 1
  selector:
    matchLabels:
      app: meta-db
      tier: meta-db
  template:
    metadata:
      labels:
        app: meta-db
        tier: meta-db
    spec:
      containers:
        - name: postgres
          image: postgres:16.2
          ports:
            - containerPort: 5432
              name: meta-db-port
          volumeMounts:
            - name: meta-db-persistent-storage
              mountPath: /var/lib/postgresql/meta-data
  volumeClaimTemplates:
    - metadata:
        name: meta-db-persistent-storage
      spec:
        storageClassName: standard
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 250Mi
