k8s/midi-manager.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: midi-manager-deployment
  labels:
    app: midi-manager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: midi-manager
  template:
    metadata:
      labels:
        app: midi-manager
    spec:
      containers:
      - name: midi-manager
        image: ghcr.io/n-sankell/examensarbete-ns-java22/midi-manager:sha-69d3821
        imagePullPolicy: Always
        ports:
        - containerPort: 8082
        
---

apiVersion: v1
kind: Service
metadata:
  name: midi-manager-service
spec:
  type: NodePort
  selector:
    app: midi-manager
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
      nodePort: 32000
