k8s/spring-boot-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-boot-app-deployment
  labels:
    app: spring-boot-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-boot-app
  template:
    metadata:
      labels:
        app: spring-boot-app
    spec:
      containers:
      - name: spring-boot-app
        image: tf-spring-boot-app:v2.8
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
        
---

apiVersion: v1
kind: Service
metadata:
  name: spring-boot-app-service
spec:
  type: NodePort
  selector:
    app: spring-boot-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 31000
