k8s/user-db.yaml

apiVersion: v1
kind: Service
metadata:
  name: user-db-service
  labels:
    app: user-db
spec:
  ports:
    - name: user-db-port
      port: 5431
      protocol: TCP
      targetPort: 5432
  selector:
    app: user-db
    tier: user-db
  clusterIP: None

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: user-db-stateful-set
  labels:
    app: user-db
spec:
  serviceName: "user-db-service"
  replicas: 1
  selector:
    matchLabels:
      app: user-db
      tier: user-db
  template:
    metadata:
      labels:
        app: user-db
        tier: user-db
    spec:
      containers:
        - name: postgres
          image: postgres:16.2
          ports:
            - containerPort: 5432
              name: user-db-port
          volumeMounts:
            - name: user-db-persistent-storage
              mountPath: /var/lib/postgresql/user-data
  volumeClaimTemplates:
    - metadata:
        name: user-db-persistent-storage
      spec:
        storageClassName: standard
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 250Mi
