k8s/user-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service-deployment
  labels:
    app: user-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
      - name: user-service
        image: docker.pkg.github.com/n-sankell/examensarbete-ns-java22/user-service:latest
        ports:
        - containerPort: 8081
        
---

apiVersion: v1
kind: Service
metadata:
  name: user-service-service
spec:
  type: NodePort
  selector:
    app: user-service
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
      nodePort: 31000
