k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  #tls:
  #- hosts:
  #  - min-favorit-mat.se
  #  secretName: secret-tls
  rules:
  - host: min-favorit-mat.se
    http:
      paths:
      - path: /fe
        pathType: Prefix
        backend:
          service:
            name: react-app-service
            port:
              number: 3000
      - path: /be
        pathType: Prefix
        backend:
          service:
            name: spring-boot-app-service
            port:
              number: 8080
